--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ functional/futex_requeue_pi_signal_restart
 functional/futex_wait_timeout
 
 functional/futex_requeue_pi_mismatched_ops
+functional/futex_wait_wouldblock
