Add futex_wait performance test
This is the first half of a patch from Michel adding futex_set_wait and
futex_wait performance tests. This patch adds the futex_wait performance
test and the necessary infrastructure.

Signed-off-by: Michel Lespinasse <walken@google.com>
Signed-off-by: Darren Hart <dvhltc@us.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 functional/futex_requeue_pi
 functional/futex_requeue_pi_signal_restart
 functional/futex_wait_timeout
-
 functional/futex_requeue_pi_mismatched_ops
 functional/futex_wait_wouldblock
+
+performance/futex_wait
+performance/futex_set_wait
